--- a/About-me.css
+++ b/About-me.css
@@ -11,7 +11,7 @@
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 641px;
+  min-height: 673px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -46,20 +46,12 @@
 .u-section-1 .u-social-icons-1 {
   height: 32px;
   min-height: 16px;
-  width: 116px;
-  min-width: 68px;
-  margin: 76px auto 0;
+  width: 32px;
+  min-width: 16px;
+  margin: 29px auto 0;
 }
 
 .u-section-1 .u-icon-1 {
-  height: 100%;
-}
-
-.u-section-1 .u-icon-2 {
-  height: 100%;
-}
-
-.u-section-1 .u-icon-3 {
   height: 100%;
 }
 
@@ -75,8 +67,8 @@
 .u-section-1 .u-image-1 {
   width: 398px;
   height: 398px;
-  background-image: url("images/Olenka.jpg");
-  background-position: 50% 8.52%;
+  background-image: url("images/WhatsAppImage2024-04-27at5.28.59PM.jpeg");
+  background-position: 50% 11.94%;
   margin: 0 auto;
 }
 
@@ -97,7 +89,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 529px;
+    min-height: 555px;
   }
 
   .u-section-1 .u-group-1 {
@@ -178,659 +170,67 @@
 .u-section-2 .u-text-1 {
   font-family: Roboto, sans-serif;
   font-weight: 700;
-  margin: 58px auto 0;
-}
-
-.u-section-2 .u-text-2 {
-  width: 689px;
-  font-weight: 700;
-  margin: 40px auto 0;
-}
-
-.u-section-2 .u-list-1 {
-  width: 1127px;
-  grid-template-rows: auto auto auto;
-  margin: 40px auto 58px;
-}
-
-.u-section-2 .u-repeater-1 {
-  grid-template-columns: calc(50% - 6px) calc(50% - 6px);
-  min-height: 532px;
-  grid-gap: 12px 12px;
+  margin: 34px auto 0;
 }
 
 .u-section-2 .u-image-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/I1.jpg");
-  background-size: cover, cover;
-  background-position: 50% 50%;
+  width: 411px;
+  height: 411px;
+  margin: 23px auto 0;
 }
 
-.u-section-2 .u-container-layout-1 {
-  padding: 0;
-}
-
-.u-section-2 .u-group-1 {
-  width: 279px;
-  min-height: 260px;
-  background-size: auto;
-  margin: 0 auto 0 0;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 30px;
+.u-section-2 .u-text-2 {
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  margin: 22px auto 0;
 }
 
 .u-section-2 .u-text-3 {
+  font-size: 1.25rem;
   font-weight: 700;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-btn-1 {
-  border-style: none;
-  text-transform: uppercase;
-  background-image: none;
-  font-size: 0.875rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-image-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/I2.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 0;
-}
-
-.u-section-2 .u-group-2 {
-  width: 279px;
-  min-height: 260px;
-  background-size: auto;
-  margin: 0 auto 0 0;
-}
-
-.u-section-2 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-4 {
-  font-weight: 700;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-btn-2 {
-  border-style: none;
-  text-transform: uppercase;
-  background-image: none;
-  font-size: 0.875rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-image-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/I3.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-2 .u-container-layout-5 {
-  padding: 0;
-}
-
-.u-section-2 .u-group-3 {
-  width: 279px;
-  min-height: 260px;
-  background-size: auto;
-  background-image: none;
-  margin: 0 auto 0 0;
-}
-
-.u-section-2 .u-container-layout-6 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-5 {
-  font-weight: 700;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-btn-3 {
-  border-style: none;
-  text-transform: uppercase;
-  background-image: none;
-  font-size: 0.875rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-image-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/I4.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-2 .u-container-layout-7 {
-  padding: 0;
-}
-
-.u-section-2 .u-group-4 {
-  width: 279px;
-  min-height: 260px;
-  background-size: auto;
-  background-image: none;
-  margin: 0 auto 0 0;
-}
-
-.u-section-2 .u-container-layout-8 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-6 {
-  font-weight: 700;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-btn-4 {
-  border-style: none;
-  text-transform: uppercase;
-  background-image: none;
-  font-size: 0.875rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin: 20px auto 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-list-1 {
-    width: 940px;
-    height: auto;
-  }
-
-  .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 6px));
-    min-height: 444px;
-  }
-
-  .u-section-2 .u-image-3 {
-    background-size: cover, cover;
-  }
-
-  .u-section-2 .u-image-4 {
-    background-size: cover, cover;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-list-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(1, 100%);
-  }
+  width: 548px;
+  margin: 34px auto 60px;
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-2 {
+  .u-section-2 .u-text-3 {
     width: 540px;
-  }
-
-  .u-section-2 .u-list-1 {
-    width: 540px;
-  }
-
-  .u-section-2 .u-image-1 {
-    background-position: 73.87% 50%;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-image-2 {
-    background-position: 88.18% 50%;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-6 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-8 {
-    padding-left: 10px;
-    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-text-2 {
+  .u-section-2 .u-sheet-1 {
+    min-height: 821px;
+  }
+
+  .u-section-2 .u-image-1 {
     width: 340px;
+    height: 340px;
   }
 
-  .u-section-2 .u-list-1 {
+  .u-section-2 .u-text-3 {
     width: 340px;
-  }
-
-  .u-section-2 .u-group-1 {
-    width: 215px;
-  }
-
-  .u-section-2 .u-group-2 {
-    width: 215px;
-  }
-
-  .u-section-2 .u-group-3 {
-    width: 215px;
-  }
-
-  .u-section-2 .u-group-4 {
-    width: 215px;
   }
 } .u-section-3 {
   background-image: none;
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 595px;
-}
-
-.u-section-3 .u-text-1 {
-  font-weight: 700;
-  font-family: Alata;
-  font-size: 2.25rem;
-  width: 598px;
-  margin: 60px auto 0;
-}
-
-.u-section-3 .u-list-1 {
-  width: 1006px;
-  margin: 61px auto 60px;
-}
-
-.u-section-3 .u-repeater-1 {
-  grid-template-columns: calc(50% - 15px) calc(50% - 15px);
-  min-height: 320px;
-  grid-gap: 30px 30px;
-}
-
-.u-section-3 .u-list-item-1 {
-  background-image: none;
-}
-
-.u-section-3 .u-container-layout-1 {
-  padding: 40px 60px 30px;
-}
-
-.u-section-3 .u-text-2 {
-  margin: 0;
-}
-
-.u-section-3 .u-text-3 {
-  font-size: 1rem;
-  margin: 20px 0 0 20px;
-}
-
-.u-section-3 .u-image-1 {
-  width: 72px;
-  height: 72px;
-  background-image: url("images/Fabacademy.png");
-  background-position: 50% 50%;
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-4 {
-  font-weight: 700;
-  margin: -65px 0 0 92px;
-}
-
-.u-section-3 .u-text-5 {
-  font-weight: 300;
-  font-size: 1rem;
-  margin: 8px 0 0 92px;
-}
-
-.u-section-3 .u-list-item-2 {
-  background-image: none;
-}
-
-.u-section-3 .u-container-layout-2 {
-  padding: 40px 60px 30px;
-}
-
-.u-section-3 .u-text-6 {
-  margin: 0;
-}
-
-.u-section-3 .u-text-7 {
-  font-size: 1rem;
-  margin: 20px 0 0 20px;
-}
-
-.u-section-3 .u-image-2 {
-  width: 72px;
-  height: 72px;
-  background-image: url("images/Olenka.jpg");
-  background-position: 50% 50%;
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-8 {
-  font-weight: 700;
-  margin: -65px 0 0 92px;
-}
-
-.u-section-3 .u-text-9 {
-  font-weight: 300;
-  font-size: 1rem;
-  margin: 8px 0 0 92px;
-}
-
-.u-section-3 .u-list-item-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-container-layout-3 {
-  padding: 40px 60px 30px;
-}
-
-.u-section-3 .u-text-10 {
-  margin: 0;
-}
-
-.u-section-3 .u-text-11 {
-  font-size: 1rem;
-  margin: 20px 0 0 20px;
-}
-
-.u-section-3 .u-image-3 {
-  width: 72px;
-  height: 72px;
-  background-image: url("images/JuanDiego.jpg");
-  background-position: 50% 50%;
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-12 {
-  font-weight: 700;
-  margin: -65px 0 0 92px;
-}
-
-.u-section-3 .u-text-13 {
-  font-weight: 300;
-  font-size: 1rem;
-  margin: 8px 0 0 92px;
-}
-
-.u-section-3 .u-list-item-4 {
-  background-image: none;
-}
-
-.u-section-3 .u-container-layout-4 {
-  padding: 40px 60px 30px;
-}
-
-.u-section-3 .u-text-14 {
-  margin: 0;
-}
-
-.u-section-3 .u-text-15 {
-  font-size: 1rem;
-  margin: 20px 0 0 20px;
-}
-
-.u-section-3 .u-image-4 {
-  width: 72px;
-  height: 72px;
-  background-image: url("images/Guillermo.jpg");
-  background-position: 50% 50%;
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-16 {
-  font-weight: 700;
-  margin: -65px 0 0 92px;
-}
-
-.u-section-3 .u-text-17 {
-  font-weight: 300;
-  font-size: 1rem;
-  margin: 8px 0 0 92px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-list-1 {
-    width: 940px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-4 {
-    width: auto;
-    margin-top: -63px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-5 {
-    width: auto;
-    margin-top: 15px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-7 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-8 {
-    width: auto;
-    margin-top: -63px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-9 {
-    width: auto;
-    margin-top: 15px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-11 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-12 {
-    width: auto;
-    margin-top: -63px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-13 {
-    width: auto;
-    margin-top: 15px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-15 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-16 {
-    width: auto;
-    margin-top: -63px;
-    margin-left: 102px;
-  }
-
-  .u-section-3 .u-text-17 {
-    width: auto;
-    margin-top: 15px;
-    margin-left: 102px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 914px;
-  }
-
-  .u-section-3 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding: 30px 30px 20px;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-container-layout-2 {
-    padding: 30px 30px 20px;
-  }
-
-  .u-section-3 .u-text-8 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-text-9 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-container-layout-3 {
-    padding: 30px 30px 20px;
-  }
-
-  .u-section-3 .u-text-12 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-text-13 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding: 30px 30px 20px;
-  }
-
-  .u-section-3 .u-text-16 {
-    margin-left: 95px;
-  }
-
-  .u-section-3 .u-text-17 {
-    margin-left: 95px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-text-1 {
-    width: 540px;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-top: 20px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-right: auto;
-  }
-
-  .u-section-3 .u-text-8 {
-    margin-top: 20px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-9 {
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-10 {
-    margin-right: auto;
-  }
-
-  .u-section-3 .u-text-12 {
-    margin-top: 20px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-13 {
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-14 {
-    margin-right: auto;
-  }
-
-  .u-section-3 .u-text-16 {
-    margin-top: 20px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-text-17 {
-    margin-right: auto;
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 2026px;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-repeater-1 {
-    grid-template-columns: 100%;
-  }
-} .u-section-4 {
-  background-image: none;
-}
-
-.u-section-4 .u-sheet-1 {
   min-height: 145px;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-3 .u-btn-1 {
   border-style: none;
   background-image: none;
   margin: 35px auto 0 0;
   padding: 9px 73px 10px 72px;
 }
 
-.u-section-4 .u-icon-1 {
+.u-section-3 .u-icon-1 {
   font-size: 2em;
 }
 
-.u-section-4 .u-btn-2 {
+.u-section-3 .u-btn-2 {
   border-style: none;
   align-self: center;
   background-image: none;
@@ -838,16 +238,16 @@
   padding: 9px 33px 10px;
 }
 
-.u-section-4 .u-icon-2 {
+.u-section-3 .u-icon-2 {
   font-size: 1.0667em;
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-btn-1 {
+  .u-section-3 .u-btn-1 {
     margin-top: 24px;
   }
 
-  .u-section-4 .u-btn-2 {
+  .u-section-3 .u-btn-2 {
     margin-top: -76px;
     margin-bottom: 51px;
   }
