--- a/About-me.css
+++ b/About-me.css
@@ -3,15 +3,16 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 791px;
+  min-height: 865px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin: 26px 0 60px;
+  margin-top: 26px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 673px;
+  min-height: 840px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -44,11 +45,11 @@
 }
 
 .u-section-1 .u-social-icons-1 {
-  height: 32px;
+  height: 66px;
   min-height: 16px;
-  width: 32px;
+  width: 66px;
   min-width: 16px;
-  margin: 29px auto 0;
+  margin: 26px auto 0;
 }
 
 .u-section-1 .u-icon-1 {
@@ -56,26 +57,26 @@
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 641px;
+  min-height: 840px;
   background-image: none;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 0 30px 30px;
+  padding: 0 12px 30px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 398px;
-  height: 398px;
+  width: 438px;
+  height: 438px;
   background-image: url("images/WhatsAppImage2024-04-27at5.28.59PM.jpeg");
-  background-position: 50% 11.94%;
-  margin: 0 auto;
+  background-position: 50% 11.62%;
+  margin: 97px auto 0;
 }
 
 .u-section-1 .u-text-3 {
   text-transform: uppercase;
   letter-spacing: 3px;
-  margin: 30px 0 0;
+  margin: 34px 18px 0;
 }
 
 @media (max-width: 1199px) {
@@ -83,13 +84,8 @@
     min-height: 679px;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-1 .u-layout-cell-1 {
-    min-height: 555px;
+    min-height: 693px;
   }
 
   .u-section-1 .u-group-1 {
@@ -102,7 +98,12 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 529px;
+    min-height: 693px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -120,8 +121,8 @@
   }
 
   .u-section-1 .u-image-1 {
-    width: 300px;
-    height: 300px;
+    width: 335px;
+    height: 335px;
   }
 }
 
@@ -162,6 +163,11 @@
 
   .u-section-1 .u-container-layout-3 {
     padding-top: 30px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 320px;
+    height: 320px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 892px;
